# backup-toolkit

./: .coveragerc  .drone.yml  .gitignore  Dockerfile.test  MANIFEST.in  README.md  docs.md  fabfile.py  requirements.dev.txt  requirements.install.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
backup/: cli.py
backup/core/: backup_item.py  extensions.py
backup/core/copy_managers/: __init__.py  native_copy_manager.py  rsync_copy_manager.py
backup/ext/: __init__.py
backup/ext/games/: __init__.py  config.yaml  games_manager.py
backup/ext/photos/: __init__.py  google_photos_api.py  metadata_database.py
cli/: README.md  fabfile.py  requirements.txt  setup.cfg
cli/backup/cli/: __init__.py  cli.py  game.py
core/: MANIFEST.in  README.md  fabfile.py  setup.cfg
core/backup/core/: cli.py  extensions.py
core/backup/core/copy_managers/: copy_manager.py  pure_copy_manager.py  rsync_copy_manager.py
core/tests/copy_managers/: copy_manager_test_case.py  test_native_copy_manager.py  test_rsync_copy_manager.py
ext/: README.md  setup.cfg
ext/backup/ext/: __init__.py
ext/backup/ext/games/: __init__.py  config.yaml  game.py  games_manager.py
save-games-backup/: fabfile.py  setup.py
save-games-backup/src/: config.yaml
src/: __init__.py  backup.py  cli.py  config.yaml  game.py  games.yaml  games_manager.py  google_photos_api.py  metadata_database.py
src/copy_managers/: __init__.py  copy_manager.py  pure_copy_manager.py  rsync_copy_manager.py
src/core/copy_managers/: __init__.py  copy_manager.py
src/ext/games/: game.py
tests/: test_cli.py
tests/copy_managers/: copy_manager_test_case.py  test_native_copy_manager.py  test_rsync_copy_manager.py
tests/core/: test_backup_item.py  test_extensions.py
tests/core/copy_managers/: copy_manager_test_case.py  test_copy_manager_factory.py  test_native_copy_manager.py  test_rsync_copy_manager.py
tests/ext/games/: test_default_configuration.py  test_games_extension.py  test_games_manager.py
tests/ext/photos/: test_photos_extension.py
