# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = backup
author = Aleem Haji
email = hajial@gmail.com
version = 0.0.1
description = Backup management CLI tool
long_description = file: README.md

[options]
packages = find:
python_requires = >=2.7
packages = 
    backup
    backup.core
    backup.core.copy_managers
    backup.ext
    backup.ext.games
package_dir =
    backup = src

# dependency_links =
#     git+ssh://git@github.com/example_github_user/example_github_repo.git@master#egg=example-local-dependency-0#subdirectory=example_local_dependency

[options.entry_points]
console_scripts =
    backup = backup.cli:do_program

[options.package_data]
backup.ext.games = config.yaml

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
