# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# https://pypi.org/classifiers/

[metadata]
name = backup
author = Aleem Haji
email = hajial@gmail.com
version = 0.1.2
description = Backup management CLI tool
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: System :: Archiving :: Backup
    Topic :: Utilities

[options]
packages = find:
python_requires = >=2.7

# dependency_links =
#     git+ssh://git@github.com/example_github_user/example_github_repo.git@master#egg=example-local-dependency-0#subdirectory=example_local_dependency

[options.entry_points]
console_scripts =
    backup = backup.cli:do_program

[options.package_data]
backup.ext.games = config.yaml

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
