# Whats this?
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = backup_cli
author = Aleem Haji
email = hajial@gmail.com
version = 0.0.1
description = Your package description!
long_description = file: README.md

[options]
# Namespace packages are not zip safe
zip_safe = False
packages = find:
python_requires = >=2.7
install_requires = backup.core

# dependency_links =
#     git+ssh://git@github.com/example_github_user/example_github_repo.git@master#egg=example-local-dependency-0#subdirectory=example_local_dependency

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
